# ai-garage-copilot-rules

./: CONTRIBUTING.md  README.md  template.pyproject.toml
.github/: copilot-instructions.md
.github/instructions/python/: classes.instructions.md  configuration.instructions.md  documentation.instructions.md  error-handling.instructions.md  functions.instructions.md  (+6 more)
.github/prompts/: code-review.prompt.md  create-prd.prompt.md  design-architecture.prompt.md  development-plan.prompt.md  execute-tasks.prompt.md  execute-tests.prompt.md  fastapi-endpoints.prompt.md  generate-tasks.prompt.md  new-idea.prompt.md  prd-creation.prompt.md  review-tasks.prompt.md  solution-architecture.prompt.md  start-prototyping.prompt.md  task-execution.prompt.md  task-generation.prompt.md  task-review.prompt.md
docs/: using-instructions.md  using-prompts.md  workflow-guide.md
samples/: README.md
samples/pet-manager/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
samples/weather-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
samples/weather-api/tests/: __init__.py  test_endpoints.py  test_services.py
samples/weather-api/weather_api/: __init__.py  main.py
samples/weather-api/weather_api/api/: endpoints.py
samples/weather-api/weather_api/core/: __init__.py  config.py  logging_config.py
samples/weather-api/weather_api/data/: __init__.py  mock_data.py
samples/weather-api/weather_api/models/: __init__.py  schemas.py
samples/weather-api/weather_api/services/: __init__.py  weather_service.py
(+13 files in other folders)
